# image-posterization

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.hpp  main  main.cpp  no_k_means.py  pillow_demo.py  posterize  posterize.cpp  quantize_k_means.py
posterize.dSYM/Contents/: Info.plist
posterize.dSYM/Contents/Resources/DWARF/: posterize
posterize.dSYM/Contents/Resources/Relocations/x86_64/: posterize.yml
